# tapr

./: .gitignore  Cargo.toml  GRAMMAR.md  README.md  new-idea.tapr  new-idea.tsp  rustfmt.toml  stdlib.ksp  stdlib.tapr  stdlib.tsp  test.ksp  test.tapr  test.tsp
src/: arguments.rs  builtin.rs  cli.rs  env.rs  error.rs  grammar.pest  graph.rs  lexer.rs  lib.rs  location.rs  main.rs  node.rs  token.rs  visitor.rs
src/callable/: function.rs  macro_.rs  mod.rs  native_function.rs
src/callable/native/: mod.rs
src/interpreter/: arguments.rs  callable.rs  environment.rs  mod.rs  parameters.rs  value.rs  visitor.rs
src/interpreter/builtin/: arithmetic.rs  boolean.rs  io.rs  list.rs  mod.rs
src/interpreter/builtins/: arithmetic.rs  boolean.rs  debug.rs  file.rs  io.rs  list.rs  mod.rs  string.rs
src/interpreter/function/: builtin.rs  mod.rs
src/interpreter/native/: arithmetic.rs  core.rs  debug.rs  function.rs  list.rs  macro_.rs  mod.rs  modules.rs  string.rs
src/interpreter/value/: builtin.rs  callable.rs  function.rs  lambda.rs  (+1 more)
src/interpreter_old/: mod.rs
src/node/: callable.rs  mod.rs
src/parser/: ast.rs  mod.rs  reader_macro.rs
src/visitor/: graph.rs  mod.rs
tests/: common.rs  function_scope_test.ksp  mod.rs  scope_test.ksp  test_functions.rs  test_korisp.rs  test_variables.rs  test_variables_and_scope.rs
tests/interpreter/: function_scope_test.ksp  mod.rs  test_builtin_functions.rs  test_custom_functions.rs  test_functions.rs  test_korisp.rs  test_quote.rs  test_variables.rs  variable_scope_test.ksp
tests/parser/: mod.rs  test_expression.rs
(+47 files in other folders)
