[package]
edition = "2021"
name = "korisp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
rustyline = "10"
thiserror = "1"
which = "4.4.0"

[dev-dependencies]
assert_cmd = "2.0.8"
tempfile = "3.3.0"
