[package]
edition = "2021"
name = "tapr"
rust-version = "1.65"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
pest = "2.6"
pest_derive = "2.6"
rustyline = "10"
thiserror = "1"
which = "4.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
